--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
       </a>
     </div>
   </main>
-  <script src="./randomCirclesModule.js" type='module'></script>
-  <script src="./randomCircles.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
-
 </html>
