--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </a>
     </div>
   </main>
-  <script src="main.js" type="module"></script>
+  <script src="./main.js" type="module"></script>
 </body>
+
 </html>
